[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Niccolò Cantù", email = "niccolo.cantu@nina.no"},
]
dependencies = [
    "titiler-application>=0.17.0",
    "uvicorn>=0.27.0.post1",
    "titiler-extensions[cogeo]>=0.17.0",
    "rio-tiler>=6.4.0",
    "walrus>=0.9.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

